2002-04-15  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* schemas/gnumeric-dialogs.schemas : new plugin schemas
	* src/Makefile.am : add src/gnumeric-gconf.c and src/gnumeric-gconf-priv.h
	* src/application.c : use get/set methods from src/gnumeric-gconf.h
	* src/commands.c : change include
	* src/error-info.c : switch to GSLists from GLists
	* src/error-info.h : switch to GSLists from GLists
	* src/gnumeric-gconf.h : new get/set methods
	* src/gnumeric-gconf.c : new
	* src/gnumeric-gconf-priv.h : formerly src/gnumeric-gconf.h
	* src/gui-util.c : switch to GSLists from GLists
	* src/gutils.h : some new g_slist functions 
	* src/gutils.c : some new g_slist functions
	* src/libgnumeric.c : use get/set methods from src/gnumeric-gconf.h
	* src/plugin-loader-module.c : switch to GSLists from GLists
	* src/plugin-loader.c : switch to GSLists from GLists
	* src/plugin-loader.h : switch to GSLists from GLists
	* src/plugin-service.c : switch to GSLists from GLists
	* src/plugin.c : switch to GSLists from GLists and use gconf
	* src/plugin.h : switch to GSLists from GLists
	* src/workbook-control-gui.c : use get/set methods from src/gnumeric-gconf.h

2002-04-15  Jon K Hellan  <hellan@acm.org>

	* src/.cvsignore: Ingore gnumeric-component

2002-04-15  Jon K Hellan  <hellan@acm.org>

	* src/main-component.c (gnumeric_component_factory): And another one.

2002-04-15  Jon K Hellan  <hellan@acm.org>

	* src/main-component.c (gnumeric_component_factory): Silence
	warning.

2002-04-15  Jon K Hellan  <hellan@acm.org>

	* src/main.[ch]: Remove from CVS.

	* src/libgnumeric.c: Really don't include main.h

2002-04-15  Jody Goldberg <jody@gnome.org>

	* src/libgnumeric.c : delete some stale code that is no longer needed
	  in gtk2.

2002-04-15  Jon K Hellan  <hellan@acm.org>

	* src/libgnumeric.h: Rename header guards after file rename.

	* src/main.[ch]: Add notes that the files are obsolete

2002-04-15  Jon K Hellan  <hellan@acm.org>
